--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tourism Accessibility MVP</title>
+  <link rel="stylesheet" href="styles.css"> <!-- Incluir el CSS -->
 </head>
 <body>
   <div id="root"></div>
