--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="root"></div> <!-- Este div debe estar presente -->
-  <script src="/dist/bundle.js"></script> <!-- Solo esta línea para el bundle.js -->
+  <div id="root"></div>
+  <div id="map" style="height: 400px; width: 100%;"></div>
+
+  <script src="/dist/bundle.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=TU_API_KEY&callback=initMap"></script>
 </body>
 </html>
