Agrega archivos de construcción y componentes necesarios

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <div id="root"></div>
   <div id="map" style="height: 400px; width: 100%;"></div>
 
-  <script src="/dist/bundle.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=TU_API_KEY&callback=initMap"></script>
+  <script src="bundle.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9YjKDDFMuUqjVV5jMi9Vy-H_zgFBSjDQ&callback=initMap"></script>
 </body>
 </html>
