--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="root"></div>
     <div id="map" style="height: 400px; width: 100%;"></div>
-    <script src="bundle.js"></script>
+    <script src="/dist/bundle.js"></script>></script>
     <script async defer="defer"
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9YjKDDFMuUqjVV5jMi9Vy-H_zgFBSjDQ&callback=initMap"></script>
 </body>
