--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Tourism Accessibility MVP</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer="defer" src="bundle.js"></script>
+    <link rel="stylesheet" href="/src/styles.css">
+    <script defer="defer" src="/dist/bundle.js"></script>
 </head>
 
 <body>
