--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
   <!-- Carga la API de Google Maps con async y defer -->
   <script async
           defer
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9YjKDDFMuUqjVV5jMi9Vy-H_zgFBSjDQ&callback=initMap">
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9YjKDDFMuUqjVV5jMi9Vy-H_zgFBSjDQ&callback=initMap" async defer></script>
+          <script>
   </script>
 
   <!-- Asegúrate de que el bundle.js se cargue después de Google Maps -->
