--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <div id="map" style="height: 400px; width: 100%;"></div>
     <script src="/dist/bundle.js"></script>></script>
     <script async="async"
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9YjKDDFMuUqjVV5jMi9Vy-H_zgFBSjDQ&callback=initMap"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9YjKDDFMuUqjVV5jMi9Vy-H_zgFBSjDQ&callback=initMap"async></script>
 </body>
 
 </html>
