--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,8 @@
 
   <!-- Carga la API de Google Maps con async y defer -->
   <script async
-
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9YjKDDFMuUqjVV5jMi9Vy-H_zgFBSjDQ&callback=initMap" async></script>
-          <script>
+          defer
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9YjKDDFMuUqjVV5jMi9Vy-H_zgFBSjDQ&callback=initMap">
   </script>
 
   <!-- Asegúrate de que el bundle.js se cargue después de Google Maps -->
